...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Di-W3-EMy">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <barButtonItem title="Add" id="8Sk-jS-g3u">
                                        <connections>
                                            <action selector="addButtonPressed:" destination="fjD-o3-p7m" id="Ke3-Hq-SfW"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="4ta-jX-Izo"/>
                                    <barButtonItem style="plain" systemItem="camera" id="1Ab-mn-790">
...
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="97.5"/>
                                                    <subviews>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MG4-TJ-RFa">
                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                                                            <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                                                            <state key="normal" title="Add Player">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="addNewPlayer:" destination="Swn-Pb-Y22" eventType="touchUpInside" id="XOD-mU-7GH"/>
                                                            </connections>
                                                        </button>
...
